--- a/css/layout.css
+++ b/css/layout.css
@@ -24,4 +24,24 @@
 
 /* Posititoning Classes */
 
+.col-1 {
+  width: 32%;
+}
 
+.col-2 {
+  width: 66%;
+}
+
+.col-3 {
+  width: 100%;
+}
+
+[class*="col-"] {
+  margin-left: 2%;
+  margin-bottom: 2%;
+  float:left
+}
+
+.first {
+  margin-left: 0;
+}
